contenido agregado en cada caja de excursiones

--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
             </div>
             <div class="hero__item hero__item-inf">
 
-                <p>Te acompañamos a disfrutar unas vacaciones inolvidables, <br>en Mendoza o en el
-                    lugar del mundo que prefieras.</p>
+                <p>Somos Turismo Cordillera, y estamos preparados para ayudarte a planificar unas vacaciones
+                    inolvidables, en Mendoza o en el lugar del mundo que prefieras.</p>
 
 
             </div>
         </section>
         <section class="intro">
             <div class="intro__content">
-                <p>Somos Turismo Cordillera, y estamos preparados para ayudarte a planificar unas vacaciones
-                    inolvidables, en Mendoza o en el lugar del mundo que prefieras. Te invitamos a conocer nuestros
+                <p>Te invitamos a conocer nuestros
                     servicios:</p>
                 <p><a href="#excursiones">EXCURSIONES</a> | <a href="#spa">SPA Y BIENESTAR</a> | <a
                         href="#traslados">TRASLADOS</a> | <a href="#eventos">EVENTOS</a> | <a href="#paquetes">PAQUETES
@@ -66,7 +65,7 @@
             </div>
             <div class="apartados__cajas">
 
-                <div class="apartados__item apartados__item--izquierda buses">
+                <div class="apartados__item apartados__overlay apartados__item--izquierda buses">
                     <div class="apartados__h3">
                         <h3>Ecoturismo y aventura</h3>
                     </div>
@@ -77,25 +76,27 @@
                             </svg></div>
                         <p>Recorre hermosos senderos y enfrenta nuevos desafíos en la naturaleza con nuestras
                             excursiones de trekking y aventura.</p>
-                        <p class="vermas__p vermas__p--derecha"><button class="vermas vermas__derecha" id="verbuses">Ver
+                        <div class="vermas__p--derecha"><button class="vermas vermas__derecha" id="verbuses">Ver
                                 más [+]</button>
-                        </p>
+                        </div>
                     </div>
                 </div>
-                <div class="apartados__item apardados__item--derecha trecking">
+                <div class="apartados__item apartados__overlay apartados__item--derecha trecking">
                     <div class="apartados__h3">
-                        <h3>trecking y aventura</h3>
+                        <h3>Cultura</h3>
                     </div>
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-footprints">
                                 <use href="./assets/icons/iconos.svg#icon-footprints"
                                     xlink:href="./assets/icons/iconos.svg#icon-footprints"></use>
                             </svg></div>
-
-                        <p class="vermas__p vermas__p--izquierda"><button class="vermas vermas__izquierda"
-                                id="vertrecking">Ver más
+                        <p>Seguí los pasos de la historia y reencontrate con el pasado mientras, sin darte cuenta,
+                            aprendés historia, geografía, geología y mineralogía al mismo tiempo que disfrutás de los
+                            paisajes más sobrecogedores.</p>
+                        <div class="vermas__p--izquierda"><button class="vermas vermas__izquierda" id="vertrecking">Ver
+                                más
                                 [+]</button>
-                        </p>
+                        </div>
                     </div>
                 </div>
                 <div class="apartados__extra vertrecking extra__izquierda">
@@ -103,41 +104,77 @@
                         <div></div>
                         <div></div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
-                        quis
-                        nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
-                        illo,
-                        iusto omnis!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
-                        minus
-                        corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
-                        doloremque quas quod illum.</p>
+                    <div class="apartados__extra--contenido">
+                        <p>Descubre los lugares emblemáticos y los más bellos paisajes de Mendoza con la mejor guía
+                            turística.</p>
+                        <ul>
+                            <li>City Tour Mendoza</li>
+                            <li><a rel="noopener noreferrer" target="_blank"
+                                    href="https://docs.google.com/document/d/1nd1shpOw6LkZmBEwHxEle_gnjnVAFdAW/edit">Bus
+                                    InterValles Pre cordillera - Luján de Cuyo</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank"
+                                    href="https://docs.google.com/document/d/1zw3FylG-S0tJKa6XkmJi9de3nk1Lm8Be/edit">Bus
+                                    InterValles Las Vegas - Cacheuta</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">Bus InterValles El Salto -
+                                    Cacheuta</a>
+                            </li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">Bus InterValles Cacheuta -
+                                    Potrerillos</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">Eco Huerta Hunuc Huar</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">Cruce los Andes - Viña de mar y
+                                    Mendoza</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">Programa Huarpe Milcayac</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">San Juan Cultural</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">San Rafael Cultural</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank" href="">Uspallata, Minas de Paramillos y
+                                    Villavicencio</a></li>
+                            <li>Valles de Malargüe</li>
+                            <li>Ruta del inca</li>
+                            <li>Mediodía en Villavicencio</li>
+                            <li>Castillos de Pincheira</li>
+                        </ul>
+                        <div class="fichas">
+                            <p class="notas">Ver todas las fichas<svg>
+                                    <use href="./assets/icons/iconos.svg#icon-fichas"
+                                        xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
+                                </svg></p>
+                            <p class="notas">Consultar<svg>
+                                    <use href="./assets/icons/iconos.svg#icon-whatsapp"
+                                        xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
+                                </svg></p>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="apartados__extra verbuses extra__derecha">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
                     </div>
-                    <p>Recorre hermosos senderos y enfrenta nuevos desafíos en la naturaleza con nuestras
-                        excursiones de trekking y aventura.</p>
-                    <ul>
-                        <li>Excursión Villavicencio Andestruck</li>
-                        <li>Alta Montaña y Cacheuta</li>
-                        <li>Caverna de las Brujas, Cascada Manqui Malal y Volcán Malacara</li>
-                        <li>Día de Playa en el corazón de la cordillera</li>
-                        <li>Encuentro de Druidas</li>
-                        <li>Multiaventura rappel Cacheuta + Cabalgata</li>
-                        <li>Experiencia 4x4</li>
-                        <li>Cascada de Manqui Malal</li>
-                        <li>Payunia 4x4</li>
-                        <li>Pesca con mosca</li>
-                        <li>Volcán Malacara y Laguna de Llancanelo</li>
-                        <li>Treck Adolfo Calle & Stepanek</li>
-                        <li>Cordón del plata</li>
-                        <li>Cabalgata al atardecer</li>
-                        <li>Pampa del Melocotón a caballo</li>
-                        <li>Malargüe con cabalgata o trekking</li>
-                    </ul>
+                    <div class="apartados__extra--contenido">
+                        <p>Recorre hermosos senderos y enfrenta nuevos desafíos en la naturaleza con nuestras
+                            excursiones de trekking y aventura.</p>
+                        <ul>
+                            <li><a rel="noopener noreferrer" target="_blank"
+                                    href="https://docs.google.com/document/d/1JhiiM11qMMpwG2PE0ESM6n4JonjqCiOo/edit">Excursión
+                                    Villavicencio Andestruck</a></li>
+                            <li>Alta Montaña y Cacheuta</li>
+                            <li>Caverna de las Brujas, Cascada Manqui Malal y Volcán Malacara</li>
+                            <li>Día de Playa en el corazón de la cordillera</li>
+                            <li>Encuentro de Druidas</li>
+                            <li>Multiaventura rappel Cacheuta + Cabalgata</li>
+                            <li>Experiencia 4x4</li>
+                            <li>Cascada de Manqui Malal</li>
+                            <li>Payunia 4x4</li>
+                            <li>Pesca con mosca</li>
+                            <li>Volcán Malacara y Laguna de Llancanelo</li>
+                            <li>Treck Adolfo Calle & Stepanek</li>
+                            <li>Cordón del plata</li>
+                            <li>Cabalgata al atardecer</li>
+                            <li>Pampa del Melocotón a caballo</li>
+                            <li>Malargüe con cabalgata o trekking</li>
+                        </ul>
+                    </div>
                 </div>
 
                 <!-- <div class="apartados__item cabalgatas">
