cruz cerrar en ventana derecha quedaba muy afuera, ya está corregido

--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                                 <use href="./assets/icons/iconos.svg#icon-footprints"
                                     xlink:href="./assets/icons/iconos.svg#icon-footprints"></use>
                             </svg></div>
-                        <p>Seguí los pasos de la historia y reencontrate con el pasado mientras, sin darte cuenta,
-                            aprendés historia, geografía, geología y mineralogía al mismo tiempo que disfrutás de los
-                            paisajes más sobrecogedores.</p>
+                        <p>Reencontrate con el pasado mientras, sin darte cuenta,
+                            aprendés historia, geografía, geología y mineralogía...<br> ...al mismo tiempo que disfrutás
+                            de los
+                            paisajes más sorprendentes.</p>
                         <div class="vermas__p--izquierda"><button class="vermas vermas__izquierda" id="vertrecking">Ver
                                 más
                                 [+]</button>
@@ -134,11 +135,11 @@
                             <li>Castillos de Pincheira</li>
                         </ul>
                         <div class="fichas">
-                            <p class="notas">Ver todas las fichas<svg>
+                            <p class="notas">Ver todas las fichas<svg class="folder">
                                     <use href="./assets/icons/iconos.svg#icon-fichas"
                                         xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
                                 </svg></p>
-                            <p class="notas">Consultar<svg>
+                            <p class="notas">Reservar<svg class="whatsapp">
                                     <use href="./assets/icons/iconos.svg#icon-whatsapp"
                                         xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
                                 </svg></p>
@@ -154,6 +155,9 @@
                     <div class="apartados__extra--contenido">
                         <p>Recorre hermosos senderos y enfrenta nuevos desafíos en la naturaleza con nuestras
                             excursiones de trekking y aventura.</p>
+                        <p class="small">Hacé click en la excursión que te interesa para ver la ficha correspondiente o
+                            más abajo vas a encontrar el enlace a la carpeta con todas las fichas y un enlace para
+                            contactarte por whatsapp</p>
                         <ul>
                             <li><a rel="noopener noreferrer" target="_blank"
                                     href="https://docs.google.com/document/d/1JhiiM11qMMpwG2PE0ESM6n4JonjqCiOo/edit">Excursión
