cambios en portada porque la foto anterior era mala

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     </nav>
 
     <div class="container">
-
         <div class="abrir-menu" id="abrir-menu">
             <div></div>
             <div></div>
@@ -47,7 +46,6 @@
                 <p>Somos Turismo Cordillera, y estamos preparados para ayudarte a planificar unas vacaciones
                     inolvidables, en Mendoza o en el lugar del mundo que prefieras.</p>
 
-
             </div>
         </section>
         <section class="intro">
@@ -59,12 +57,14 @@
                         TURÍSTICOS</a></p>
             </div>
         </section>
+
+        <!-- ================EXCURSIONES ====================-->
         <section class="apartados" id="excursiones">
             <div class="apartados__titulo apartados__titulo-excursiones">
                 <h2>EXCURSIONES</h2>
             </div>
             <div class="apartados__cajas">
-
+                <!-- ================ECOTURISMO Y AVENTURA - ABRE VENTANA DE LA DERECHA ====================-->
                 <div class="apartados__item apartados__overlay apartados__item--izquierda trecking">
                     <div class="apartados__h3">
                         <h3>Ecoturismo y aventura</h3>
@@ -81,6 +81,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- ================EXCURSIOONES > CULTURA - ABRE VENTANA DE LA IZQUIERDA ====================-->
                 <div class="apartados__item apartados__overlay apartados__item--derecha cultura">
                     <div class="apartados__h3">
                         <h3>Cultura</h3>
@@ -100,6 +101,8 @@
                         </div>
                     </div>
                 </div>
+                <!-- ================ DETALLES CULTURA - VENTANA DE LA IZQUIERDA ====================-->
+
                 <div class="apartados__extra vercultura extra__izquierda">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
@@ -152,6 +155,7 @@
                     </div>
 
                 </div>
+                <!-- ================ DETALLES TRECKING - VENTANA DE LA DERECHA ====================-->
                 <div class="apartados__extra vertrecking extra__derecha">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
@@ -201,11 +205,13 @@
             </div>
 
         </section>
+        <!-- ================ GASTRONOMIA ====================-->
         <section class="apartados" id="gastronomia">
             <div class="apartados__titulo apartados__titulo-gastronomia">
                 <h2>GASTRONOM&Iacute;A Y VINOS</h2>
             </div>
             <div class="apartados__cajas">
+                <!-- ================ GASTRONOMIA > BODEGAS - ABRE VENTANA DE LA DERECHA - ICONO WINEBOTTLE ====================-->
                 <div class="apartados__item apartados__overlay bodegas">
                     <div class="apartados__h3">
                         <h3>bodegas y viñedos</h3>
@@ -222,6 +228,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- ================ GASTRONOMIA > GASTRONOMIA - ABRE VENTANA DE LA IZQUIERDA - ICONO FOOD ====================-->
                 <div class="apartados__item apartados__overlay gastronomia">
                     <div class="apartados__h3">
                         <h3>gastronomía</h3>
@@ -233,11 +240,12 @@
                             </svg></div>
                         <p>Deleita tus sentidos con la gastronomía de los restaurantes mendocinos y los productos de
                             elaboración local.</p>
-                        <div class="vermas__p--derecha"><button class="vermas vermas__derecha" id="vercomidas">Ver
+                        <div class="vermas__p--izquierda"><button class="vermas vermas__izquierda" id="vercomidas">Ver
                                 más [+]</button>
                         </div>
                     </div>
                 </div>
+                <!-- ================ DETALLES COMIDA - VENTANA DE LA IZQUIERDA ====================-->
                 <div class="apartados__extra vercomidas extra__izquierda">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
@@ -290,6 +298,7 @@
                     </div>
 
                 </div>
+                <!-- ================ DETALLES BODEGA - VENTANA DE LA DERECHA ====================-->
                 <div class="apartados__extra verbodegas extra__derecha">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
@@ -336,11 +345,13 @@
                 </div>
             </div>
         </section>
+        <!-- ================ SPA Y BIENESTAR ====================-->
         <section class="apartados" id="spa">
             <div class="apartados__titulo apartados__titulo-spa">
                 <H2>SPA Y BIENESTAR</H2>
             </div>
             <div class="apartados__cajas">
+                <!-- ================ SPA Y TERMAS - ABRE VENTANA DE LA DERECHA - ICON SPA ====================-->
                 <div class="apartados__item apartados__overlay spa">
                     <div class="apartados__h3">
                         <h3>SPA Y AGUAS TERMALES</h3>
@@ -361,18 +372,19 @@
                     </div>
 
                 </div>
+                <!-- ================ SUP - ABRE VENTANA DE LA IZQUIERDA - ICON WATER ====================-->
                 <div class="apartados__item apartados__overlay sup">
                     <div class="apartados__h3">
                         <h3>SUP</h3>
                     </div>
                     <div class="item__overlay">
-                        <div class="icono"><svg class="icon icon-food">
-                                <use href="./assets/icons/iconos.svg#icon-food"
-                                    xlink:href="./assets/icons/iconos.svg#icon-food"></use>
+                        <div class="icono"><svg class="icon icon-water">
+                                <use href="./assets/icons/iconos.svg#icon-water"
+                                    xlink:href="./assets/icons/iconos.svg#icon-water"></use>
                             </svg></div>
                         <p>Deleita tus sentidos con la gastronomía de los restaurantes mendocinos y los productos de
                             elaboración local.</p>
-                        <div class="vermas__p--derecha"><button class="vermas vermas__derecha" id="versup">Ver
+                        <div class="vermas__p--izquierda"><button class="vermas vermas__izquierda" id="versup">Ver
                                 más [+]</button>
                         </div>
                     </div>
@@ -380,6 +392,7 @@
 
             </div>
         </section>
+        <!-- ================ PAQUETES TURISTICOS ====================-->
         <section class="apartados" id="paquetes">
             <div class="apartados__titulo apartados__titulo-paquetes">
                 <h2>PAQUETES TUR&Iacute;STICOS</h2>
