paquetes ya presentado, faltan fotos de otros destinos

--- a/index.html
+++ b/index.html
@@ -554,12 +554,13 @@
             </div>
             <div class="apartados__cajas">
                 <div class="apartados__item paquetes">
-                    <div class="apartados__h3">
-                        <h3>bodegas y viñedos</h3>
-                    </div>
+
 
                 </div>
-                <div class="apartados__item">
+                <div class="apartados__item paquetes__info">
+                    <p>¿Buscas paquetes completos de alojamiento en Mendoza, Argentina o en el exterior? ¡Tenemos un
+                        plan para cada necesidad!</p>
+                    <p class="small info">Escribinos para solicitar cotización por el destino que se te ocurra</p>
                     <ul>
                         <li><a rel="noopener noreferrer" target="_blank"
                                 href="https://docs.google.com/document/d/1FTvTpxZzFwZOt7tG3rmcvtIDzds4YSdL/edit">Cruce
