casi listo, falta transporte y footer

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                             xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
                                     </svg>
                                 </a></p>
-                            <p class="notas"><a href="https://wa.me/549261">
+                            <p class="notas"><a href="https://wa.me/5492616965358">
                                     Reservar<svg class="whatsapp">
                                         <use href="./assets/icons/iconos.svg#icon-whatsapp"
                                             xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
@@ -242,7 +242,7 @@
                                             xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
                                     </svg>
                                 </a></p>
-                            <p class="notas"><a href="https://wa.me/549261">
+                            <p class="notas"><a href="https://wa.me/5492616965358">
                                     Reservar<svg class="whatsapp">
                                         <use href="./assets/icons/iconos.svg#icon-whatsapp"
                                             xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
@@ -343,7 +343,7 @@
                                             xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
                                     </svg>
                                 </a></p>
-                            <p class="notas"><a href="https://wa.me/549261">
+                            <p class="notas"><a href="https://wa.me/5492616965358">
                                     Reservar<svg class="whatsapp">
                                         <use href="./assets/icons/iconos.svg#icon-whatsapp"
                                             xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
@@ -389,7 +389,7 @@
                                             xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
                                     </svg>
                                 </a></p>
-                            <p class="notas"><a href="https://wa.me/549261">
+                            <p class="notas"><a href="https://wa.me/5492616965358">
                                     Reservar<svg class="whatsapp">
                                         <use href="./assets/icons/iconos.svg#icon-whatsapp"
                                             xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
@@ -486,7 +486,7 @@
                                             xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
                                     </svg>
                                 </a></p>
-                            <p class="notas"><a href="https://wa.me/549261">
+                            <p class="notas"><a href="https://wa.me/5492616965358">
                                     Reservar<svg class="whatsapp">
                                         <use href="./assets/icons/iconos.svg#icon-whatsapp"
                                             xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
@@ -535,7 +535,7 @@
                                             xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
                                     </svg>
                                 </a></p>
-                            <p class="notas"><a href="https://wa.me/549261">
+                            <p class="notas"><a href="https://wa.me/5492616965358">
                                     Reservar<svg class="whatsapp">
                                         <use href="./assets/icons/iconos.svg#icon-whatsapp"
                                             xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
@@ -557,15 +557,20 @@
 
 
                 </div>
-                <div class="apartados__item paquetes__info">
-                    <p>¿Buscas paquetes completos de alojamiento en Mendoza, Argentina o en el exterior? ¡Tenemos un
+                <div class="apartados__item cajas__info">
+                    <p>¿Buscas paquetes completos de alojamiento en Mendoza, Argentina o en el exterior? <br>¡Tenemos un
                         plan para cada necesidad!</p>
-                    <p class="small info">Escribinos para solicitar cotización por el destino que se te ocurra</p>
+                    <p class="small info"><svg class="folder">
+                            <use href="./assets/icons/iconos.svg#icon-info"
+                                xlink:href="./assets/icons/iconos.svg#icon-info"></use>
+                        </svg>Escribinos para solicitar cotización por el destino que se te ocurra.</p>
+                    <h3>Provincia de
+                        Mendoza y alrededores, incluso Chile</h3>
                     <ul>
                         <li><a rel="noopener noreferrer" target="_blank"
                                 href="https://docs.google.com/document/d/1FTvTpxZzFwZOt7tG3rmcvtIDzds4YSdL/edit">Cruce
                                 los
-                                Andes - Viña de mar y
+                                Andes - Viña del Mar y
                                 Mendoza</a></li>
                         <li><a rel="noopener noreferrer" target="_blank"
                                 href="https://drive.google.com/drive/folders/1bpO7lQUr_zkOL75_ZAaX3Yo5R6k7Ue2E">San
@@ -573,19 +578,41 @@
                         <li><a rel="noopener noreferrer" target="_blank"
                                 href="https://docs.google.com/document/d/1GYhlo-s-rCt-531hr7bplNXvGl3HuYD7/edit">Ruta
                                 del
-                                inca</a></li>
+                                Inca</a></li>
                         <li><a rel="noopener noreferrer" target="_blank"
                                 href="https://docs.google.com/document/d/1reIRizLRyHVO4tIabli-vBn4EbdZ1GtI/edit">Encuentro
                                 de Druidas</a></li>
                     </ul>
+                    <h3>otros destinos populares dentro de nuestro país</h3>
+                    <div class="galeria">
+                        <figure class="bari">
+                            <figcaption>Bariloche</figcaption>
+                        </figure>
+                        <figure class="termasRH">
+                            <figcaption>Termas de Río Hondo</figcaption>
+                        </figure>
+                        <figure class="carlospaz">
+                            <figcaption>Villa Carlos Paz</figcaption>
+                        </figure>
+                        <figure class="sanluis">
+                            <figcaption>San Luis</figcaption>
+                        </figure>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="apartados" id="traslados">
             <div class="apartados__titulo apartados__titulo-traslados">
-                <h2>TURISMO</h2>
+                <h2>TRANSPORTE</h2>
             </div>
-            <div class="apartados__item-turismo"></div>
+            <div class="apartados__cajas">
+                <div class="apartados__item transporte__info">
+
+                </div>
+                <div class="apartados__item transporte">
+
+                </div>
+            </div>
         </section>
     </div>
     <script src="./js/index.js"></script>
