faltaba enlace a transporte en el menú lateral

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="#gastronomia"></i>gastronomía</a></li>
             <li><a href="#spa">spa</a></li>
             <li><a href="#paquetes">paquetes</a></li>
+            <li><a href="#traslados">transporte</a></li>
             <li><a href="#contacto">contacto</a></li>
         </ul>
     </nav>
