agregué botones de fichas y whatsapp a sector de paquetes

--- a/index.html
+++ b/index.html
@@ -599,6 +599,21 @@
                             <figcaption>San Luis</figcaption>
                         </figure>
                     </div>
+                    <div class="fichas">
+                        <p class="notas"><a rel="noopener noreferrer" target="_blank"
+                                href="https://drive.google.com/drive/folders/1bpO7lQUr_zkOL75_ZAaX3Yo5R6k7Ue2E">
+                                Ver todas las fichas<svg class="folder">
+                                    <use href="./assets/icons/iconos.svg#icon-fichas"
+                                        xlink:href="./assets/icons/iconos.svg#icon-fichas"></use>
+                                </svg>
+                            </a></p>
+                        <p class="notas"><a href="https://wa.me/5492616965358">
+                                Reservar<svg class="whatsapp">
+                                    <use href="./assets/icons/iconos.svg#icon-whatsapp"
+                                        xlink:href="./assets/icons/iconos.svg#icon-whatsapp"></use>
+                                </svg>
+                            </a></p>
+                    </div>
                 </div>
             </div>
         </section>
