--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 <h2>TRANSPORTE</h2>
             </div>
             <div class="apartados__cajas">
-                <div class="apartados__item transporte__info">
+                <div class="apartados__item cajas__info">
 
                 </div>
                 <div class="apartados__item transporte">
