corrección a fichas de gastronomía

--- a/index.html
+++ b/index.html
@@ -305,36 +305,27 @@
                         <div></div>
                     </div>
                     <div class="apartados__extra--contenido">
+                        <p>Las siguientes excursiones incluyen almuerzos, meriendas o cenas con menúes tradicionales.
+                        </p>
                         <p class="small info"><svg class="folder">
                                 <use href="./assets/icons/iconos.svg#icon-info"
                                     xlink:href="./assets/icons/iconos.svg#icon-info"></use>
                             </svg>Hacé click en la excursión que te interesa para ver la ficha
                             correspondiente.</p>
                         <ul>
-                            <li>City Tour Mendoza</li>
                             <li><a rel="noopener noreferrer" target="_blank"
-                                    href="https://docs.google.com/document/d/1nd1shpOw6LkZmBEwHxEle_gnjnVAFdAW/edit">Bus
-                                    InterValles Pre cordillera - Luján de Cuyo</a></li>
+                                    href="https://docs.google.com/document/d/1rfKWwGkHVJ7IHupDFjgwhTbK7HYgJ-X_/edit">Cabalgata
+                                    al atardecer</a></li>
                             <li><a rel="noopener noreferrer" target="_blank"
-                                    href="https://docs.google.com/document/d/1zw3FylG-S0tJKa6XkmJi9de3nk1Lm8Be/edit">Bus
-                                    InterValles Las Vegas - Cacheuta</a></li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">Bus InterValles El Salto -
-                                    Cacheuta</a>
+                                    href="https://docs.google.com/document/d/1rW0YaamCoeOSVUeB5rcy18s9RciN0sRX/edit">Excursión
+                                    Valles y Termas</a></li>
+                            <li><a rel="noopener noreferrer" target="_blank"
+                                    href="https://docs.google.com/document/d/13WTriSndxmn47qZ0fGdkZB5OnBTGmehN/edit">Full
+                                    day bodegas con almuerzo</a>
                             </li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">Bus InterValles Cacheuta -
-                                    Potrerillos</a></li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">Eco Huerta Hunuc Huar</a></li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">Cruce los Andes - Viña de mar y
-                                    Mendoza</a></li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">Programa Huarpe Milcayac</a></li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">San Juan Cultural</a></li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">San Rafael Cultural</a></li>
-                            <li><a rel="noopener noreferrer" target="_blank" href="">Uspallata, Minas de Paramillos y
-                                    Villavicencio</a></li>
-                            <li>Valles de Malargüe</li>
-                            <li>Ruta del inca</li>
-                            <li>Mediodía en Villavicencio</li>
-                            <li>Castillos de Pincheira</li>
+                            <li><a rel="noopener noreferrer" target="_blank"
+                                    href="https://docs.google.com/document/d/1M3kqBmgBeNm1UlsZ8HkI91IClv32bZqN/edit">Vino
+                                    y pesca</a></li>
                         </ul>
                         <div class="fichas">
                             <p class="notas"><a rel="noopener noreferrer" target="_blank"
