--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                     quas
                     quibusdam blanditiis similique, libero cum, aliquid natus nesciunt at eaque, quam itaque quos
                     repellendus excepturi veniam pariatur.</p>
-                <iframe
+                <iframe title="Mapa de ubicación"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.5561911433742!2d-68.8178239!3d-32.9627249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0b820d0c403d%3A0x236fff79a86c72ff!2sLos%20Escritores%202816%2C%20Maip%C3%BA%2C%20Mendoza!5e0!3m2!1ses-419!2sar!4v1713128154377!5m2!1ses-419!2sar"
                     width="500" height="250" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
