armando versión mobile, falta corregir persianas horizontales y footer

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <!-- ================ DETALLES CULTURA - VENTANA DE LA IZQUIERDA ====================-->
 
-                <div class="apartados__extra vercultura extra__izquierda">
+                <div class="apartados__extra vercultura extra__izquierda toggleMobile">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
@@ -183,7 +183,7 @@
 
                 </div>
                 <!-- ================ DETALLES TRECKING - VENTANA DE LA DERECHA ====================-->
-                <div class="apartados__extra vertrecking extra__derecha">
+                <div class="apartados__extra vertrecking extra__derecha toggleMobile">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
@@ -299,7 +299,7 @@
                     </div>
                 </div>
                 <!-- ================ DETALLES COMIDA - VENTANA DE LA IZQUIERDA ====================-->
-                <div class="apartados__extra vercomidas extra__izquierda">
+                <div class="apartados__extra vercomidas extra__izquierda toggleMobile">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
@@ -346,7 +346,7 @@
 
                 </div>
                 <!-- ================ DETALLES BODEGA - VENTANA DE LA DERECHA ====================-->
-                <div class="apartados__extra verbodegas extra__derecha">
+                <div class="apartados__extra verbodegas extra__derecha toggleMobile">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
@@ -434,7 +434,7 @@
                 </div>
 
                 <!-- ================ DETALLES SUP - VENTANA DE LA IZQUIERDA ====================-->
-                <div class="apartados__extra versup extra__izquierda">
+                <div class="apartados__extra versup extra__izquierda toggleMobile">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
@@ -489,7 +489,7 @@
 
                 </div>
                 <!-- ================ DETALLES SPA - VENTANA DE LA DERECHA ====================-->
-                <div class="apartados__extra verspa extra__derecha">
+                <div class="apartados__extra verspa extra__derecha toggleMobile">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
